added x-api-key to cors